Initial header upload

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Struttura WP</title>
+    <title>Neori</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -13,7 +13,17 @@
         <header>
             <nav>
                 <div class="myLogo"></div>
-                <div class="menuOptions"></div>
+
+                <div class="menuOptions">
+                    <ul>
+                        <li>Features</li>
+                        <li>Editorials</li>
+                        <li>Environment</li>
+                        <li>Blog</li>
+                        <li>Shop</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
             </nav>
         </header>
         <!-- /Header -->
