Main image edit

--- a/index.html
+++ b/index.html
@@ -31,12 +31,21 @@
         <!-- Main -->
         <main>
             <!-- Main image / Slideshow -->
-            <div class="imgSlideshow"></div>
+            <div class="imgSlideshow">
+                <div class="imgTitle1">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, debitis?
+                </div>
+                <div class="imgTitle2">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita hic quis corporis, omnis laborum exercitationem ratione sequi 
+                </div>
+            </div>
             <!-- /Main image / Slideshow -->
 
             <!-- Other content -->
             <div class="articleContent">
-                <div class="articleTitle"></div>
+                <div class="articleTitle">
+                    <h1>Leadership</h1>
+                </div>
                 <div class="mainArticle clearfix">
                     <div class="leftColumn">
                         <div class="sideImg"></div>
