Columns content upload

--- a/index.html
+++ b/index.html
@@ -45,19 +45,29 @@
             <div class="articleContent">
                 <div class="articleTitle">
                     <h1>Leadership</h1>
+                    <p>Lorem ipsum dolor sit amet.</p>
                 </div>
                 <div class="mainArticle clearfix">
                     <div class="leftColumn">
-                        <div class="sideImg"></div>
-                        <div class="textContent">&nbsp;</div>
+                        <div class="sideImg" id="first"></div>
+                        <div class="textContent">
+                            <h4>Lorem</h4>
+                            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid expedita vero dolorem a, nihil unde libero numquam. Ipsum assumenda nostrum doloremque quia, sapiente, voluptatibus sequi dolorem architecto doloribus explicabo alias ratione cum maiores, in facilis!</span>
+                        </div>
                     </div>
                     <div class="centerColumn">
                         <div class="centerImg"></div>
-                        <div class="textContent"></div>
+                        <div class="textContent">
+                            <h4>Ipsum</h4>
+                            <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis architecto mollitia assumenda nam recusandae veritatis soluta laudantium consequuntur error, ipsa corrupti numquam ex sunt, enim fuga nisi et fugiat. Vero minima saepe aspernatur praesentium ad voluptate tempora, quaerat perspiciatis ratione. Beatae laudantium officiis ut, qui voluptatum sed sapiente reprehenderit consequatur? Voluptatibus voluptates recusandae animi sit qui voluptatem blanditiis numquam vel in commodi, facere quis cumque odit architecto nam officiis quae illo, totam et hic dolores.</span>
+                        </div>
                     </div>
                     <div class="rightColumn">
-                        <div class="sideImg"></div>
-                        <div class="textContent"></div>
+                        <div class="sideImg" id="second"></div>
+                        <div class="textContent">
+                            <h4>Lorem</h4>
+                            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid expedita vero dolorem a, nihil unde libero numquam. Ipsum assumenda nostrum doloremque quia, sapiente, voluptatibus sequi dolorem architecto doloribus explicabo alias ratione cum maiores, in facilis!</span>
+                        </div>
                     </div>
                 </div>
             </div>
