--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, debitis?
                 </div>
                 <div class="imgTitle2">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita hic quis corporis, omnis laborum exercitationem ratione sequi 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita hic quis corporis, omnis laborum exercitationem ratione sequi
                 </div>
             </div>
             <!-- /Main image / Slideshow -->
@@ -52,21 +52,21 @@
                         <div class="sideImg" id="first"></div>
                         <div class="textContent">
                             <h4>Lorem</h4>
-                            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid expedita vero dolorem a, nihil unde libero numquam. Ipsum assumenda nostrum doloremque quia, sapiente, voluptatibus sequi dolorem architecto doloribus explicabo alias ratione cum maiores, in facilis!</span>
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ab necessitatibus possimus incidunt hic illum in officia rem quibusdam, magni vero dolores voluptatum reiciendis nam.</span>
                         </div>
                     </div>
                     <div class="centerColumn">
                         <div class="centerImg"></div>
                         <div class="textContent">
                             <h4>Ipsum</h4>
-                            <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis architecto mollitia assumenda nam recusandae veritatis soluta laudantium consequuntur error, ipsa corrupti numquam ex sunt, enim fuga nisi et fugiat. Vero minima saepe aspernatur praesentium ad voluptate tempora, quaerat perspiciatis ratione. Beatae laudantium officiis ut, qui voluptatum sed sapiente reprehenderit consequatur? Voluptatibus voluptates recusandae animi sit qui voluptatem blanditiis numquam vel in commodi, facere quis cumque odit architecto nam officiis quae illo, totam et hic dolores.</span>
+                            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium quas consequuntur consectetur id, perspiciatis error impedit doloremque, aliquam laboriosam deserunt quia eaque consequatur voluptatum minima? Iste esse nesciunt eaque pariatur. Nostrum illo earum quam sint! Nam minima officiis error laudantium voluptatum voluptate eligendi ducimus! Et soluta explicabo accusantium labore eum iure id possimus quae inventore nihil rem, magnam eaque quia consequatur distinctio cupiditate repellendus! Reprehenderit unde amet consequatur nobis ullam. In possimus sint, quaerat laborum consequuntur quae atque, velit perferendis magnam quam laudantium quis fugiat nemo ab tenetur! Dicta, illo?</span>
                         </div>
                     </div>
                     <div class="rightColumn">
                         <div class="sideImg" id="second"></div>
                         <div class="textContent">
                             <h4>Lorem</h4>
-                            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid expedita vero dolorem a, nihil unde libero numquam. Ipsum assumenda nostrum doloremque quia, sapiente, voluptatibus sequi dolorem architecto doloribus explicabo alias ratione cum maiores, in facilis!</span>
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, quibusdam voluptas. Alias consectetur laborum soluta illo vitae voluptate nesciunt inventore? Minima alias debitis repudiandae esse?</span>
                         </div>
                     </div>
                 </div>
@@ -77,6 +77,7 @@
     
         <!-- Footer -->
         <footer>
+            <span class="footerText">Designed with</span>
         </footer>
         <!-- /Footer -->
     </div>
