--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Main image / Slideshow -->
             <div class="imgSlideshow">
                 <div class="imgTitle1">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, debitis?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </div>
                 <div class="imgTitle2">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita hic quis corporis, omnis laborum exercitationem ratione sequi
