Main img title edit

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </div>
                 <div class="imgTitle2">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita hic quis corporis, omnis laborum exercitationem ratione sequi
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, perspiciatis reprehenderit. Quo nesciunt ut culpa!
                 </div>
             </div>
             <!-- /Main image / Slideshow -->
